@@ -1,8 +1,12 @@
-/* Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
+/*
+ * Copyright Camunda Services GmbH and/or licensed to Camunda Services GmbH
+ * under one or more contributor license agreements. See the NOTICE file
+ * distributed with this work for additional information regarding copyright
+ * ownership. Camunda licenses this file to you under the Apache License,
+ * Version 2.0; you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -40,7 +44,7 @@ public class LogUtil {
   }
 
   private static final String LINE_SEPARATOR = System.getProperty("line.separator");
-  private static Map<Integer, String> threadIndents = new HashMap<Integer, String>();
+  private static Map<Integer, String> threadIndents = new HashMap<>();
   private static ThreadLogMode threadLogMode = ThreadLogMode.NONE;
 
   public static ThreadLogMode getThreadLogMode() {
@@ -120,7 +124,7 @@ public class LogUtil {
     }
 
     protected static String getThreadIndent(int threadId) {
-      Integer threadIdInteger = new Integer(threadId);
+      Integer threadIdInteger = Integer.valueOf(threadId);
       if (threadLogMode==ThreadLogMode.NONE) {
         return "";
       }
@@ -142,6 +146,6 @@ public class LogUtil {
   }
 
   public static void resetThreadIndents() {
-    threadIndents = new HashMap<Integer, String>();
+    threadIndents = new HashMap<>();
   }
 }
