@@ -1,8 +1,12 @@
-/* Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
+/*
+ * Copyright Camunda Services GmbH and/or licensed to Camunda Services GmbH
+ * under one or more contributor license agreements. See the NOTICE file
+ * distributed with this work for additional information regarding copyright
+ * ownership. Camunda licenses this file to you under the Apache License,
+ * Version 2.0; you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -28,18 +32,18 @@ public class ShortValueSerializer extends PrimitiveValueSerializer<ShortValue> {
   }
 
   public ShortValue convertToTypedValue(UntypedValueImpl untypedValue) {
-    return Variables.shortValue((Short) untypedValue.getValue());
+    return Variables.shortValue((Short) untypedValue.getValue(), untypedValue.isTransient());
   }
 
-  public ShortValue readValue(ValueFields valueFields) {
+  public ShortValue readValue(ValueFields valueFields, boolean asTransientValue) {
     Long longValue = valueFields.getLongValue();
     Short shortValue = null;
 
     if(longValue != null) {
-      shortValue = new Short(longValue.shortValue());
+      shortValue = Short.valueOf(longValue.shortValue());
     }
 
-    return Variables.shortValue(shortValue);
+    return Variables.shortValue(shortValue, asTransientValue);
   }
 
   public void writeValue(ShortValue value, ValueFields valueFields) {
